name:                type-safe-mips
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/type-safe-mips#readme
license:             BSD3
license-file:        LICENSE
author:              Author name here
maintainer:          example@example.com
copyright:           2017 Author name here
category:            Web
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AppliedUnit, BasicUnit, Bit, DebugSF, DelayedSF, Natural, Util
  build-depends:       base >= 4.7 && < 5
                     , Yampa
  default-language:    Haskell2010

executable type-safe-mips-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , type-safe-mips
                     , Yampa
  default-language:    Haskell2010

test-suite type-safe-mips-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  exposed-modules:     AppliedUnitTest
  main-is:             Spec.hs
  build-depends:       base
                     , type-safe-mips
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/nwtgck/type-safe-mips-haskell
